# Learning_file_2

./: .gitignore.swp
OwnOAuth2/: package-lock.json  package.json  server.js
OwnOAuth2/2_front/: package-lock.json  package.json
OwnOAuth2/database/: db.js
OwnOAuth2/frontend/: package-lock.json  package.json
OwnOAuth2/jwt/: jwToken.js
OwnOAuth2/ownRoutes/: routes.js
OwnOAuth2/secondServer/: package-lock.json  package.json  server.js
SnakeGame/: SnakeGame.mk  SnakeGame.project  a.out  main.cpp
SnakeGame/Debug/: SnakeGame
boost_asio/: a.out  asyn_server  async_server.cpp  client  client.cpp  server  sync_server.cpp
childProcess/: a.out  app.js  package-lock.json  package.json
childProcess/HTML_TO_JSX/: .cproject  .gitignore  .project  a.out  main.cpp
childProcess/views/: page.ejs
device_driver/: .m1.ko.cmd  .m1.mod.cmd  .m1.mod.o.cmd  .m1.o.cmd  Makefile  m1.c  m1.ko  m1.mod  m1.mod.c  m12.c  m13.c  modules.order  test.c
device_driver/=/: Cookies  TransportSecurity  machineid  storage.json
ffmpeg/basic/: CMakeLists.txt  alsa_sound.cpp  audioProcessing.cpp  main  main.cpp  main2.cpp  sound_processing.cpp  test.cpp  try.cpp  video_processing.cpp
live_streaming/backend/: config.js  media-server.js  package-lock.json  (+2 more)
memTracking/: CMakeLists.txt  a.out  helper.hpp  sample.cpp  test.hpp  test2.cpp  test_test.cpp
nodejsEvenetsbasic/: app.js  package-lock.json  package.json  test.js
php_mysql/: edit_student.php  get_student_info.php  index.html  insert_student.php  mysql_connector.php
proto_buf/: CMakeLists.txt  sample.proto  test.cpp
(+287 files in other folders)
